# doculens

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json
include/: document_scanner.hpp
legacy/: main.py
src/: document_scanner.cpp  main.cpp
